# homeops

./: .gitignore  .justfile  .mise.toml  .renovaterc.json5  .sops.yaml  .yamllint  AGENTS.md  ARGOCD_FLUX_COEXISTENCE.md  ARGOCD_FLUX_PARALLEL_MIGRATION.md  ARGOCD_HTTPROUTE_FIX.md  ARGOCD_HTTPROUTE_IMPLEMENTATION.md  ARGOCD_INGRESS_OPTIONS.md  ARGOCD_INGRESS_QUICK_ANSWER.md  ARGOCD_MANIFESTS_EXAMPLES.md  ARGOCD_MANIFEST_INSTALL_FIX.md  ARGOCD_REFERENCEGRANT_SOLUTION.md  ARGOCD_SETUP_SUMMARY.md  ARGOCD_TLS_CONFIGURATION.md  ARGOCD_TLS_QUICK_FIX.md  ARGOCD_VOLSYNC_IMPLEMENTATION.md  COEXISTENCE_QUICK_ANSWER.md  CSI-DRIVER-NFS-DEPLOYMENT-GUIDE.md  Justfile  KEY_FINDINGS.md  MIGRATION_CHECKLIST.md  MIGRATION_DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  MIGRATION_PLAN_FLUXCD_TO_ARGOCD.md  MIGRATION_SUMMARY.md  README.md  Taskfile.yaml  VOLSYNC_COMPONENTS_ANSWER.md  VOLSYNC_COMPONENTS_IN_ARGOCD.md  VOLSYNC_MUTATOR_ARGOCD_GUIDE.md  _tmp-cnpg-app.yaml  argocd-bootstrap-values.yaml  cancel-operation.yaml  cleanup-mayastor-pvs.ps1  cleanup-mayastor-snapshots.ps1  config.yaml  (+45 more)
.github/: CODEOWNERS  CONTRIBUTING.md
.renovate/: autoMerge.json5  customManagers.json5  groups.json5
apps/log-aggregator/: .dockerignore  Dockerfile  README.md  n8n-workflow.json  pyproject.toml
apps/log-aggregator/src/log_aggregator/: __init__.py  config.py  database.py  main.py  mcp_server.py  models.py  services.py
apps/log-aggregator/src/log_aggregator/clients/: __init__.py  kubernetes.py  loki.py  prometheus.py
apps/tempest-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/tempest-mcp/src/tempest_mcp/: __init__.py  config.py  main.py  mcp_server.py
archive/: mariadb-cluster.yaml  mariadb-operator.yaml
bootstrap/: github-deploy-key.sops.yaml  helmfile.yaml  mod.just
docs/: ARGOCD_IMPROVEMENTS_SUMMARY.md  README.md  (+11 more)
(+2219 files in other folders)
